--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "template-py"
+name = "remora-demo"
 version = "0.1.0"
 description = "A Python project template with modern tooling."
 readme = "README.md"
@@ -32,7 +32,7 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 # Tell hatch which package to ship (your code lives in src/template_py)
-packages = ["src/template_py"]
+packages = ["src/remora_demo"]
 
 [tool.hatch.build.targets.sdist]
 include = [
