--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ __pycache__/
 .direnv/**
 #.tmuxp.yaml
 .python-version
-devenv.lock
-uv.lock
+#devenv.lock
+#uv.lock
 .devenv.flake.nix
 
 
@@ -150,6 +150,7 @@ celerybeat.pid
 .env
 .envrc
 .venv
+.remora/
 env/
 venv/
 ENV/
