--- a/.tmuxp.yaml
+++ b/.tmuxp.yaml
@@ -6,9 +6,9 @@ windows:
       main-pane-width: 20%
     panes:
       - shell_command:
-          - cd ~/Documents/Notes/Projects/remora-demo
+          - cd ~/Documents/Notes/Projects/remora-demo/backend
           # - nvim Notes.md ToDo.md
-          - open-project
+          #- open-project
       - shell_command:
           - tmux resizep -y 85%
           - filelist-open "startup_files.txt" remora-demo
