Working on demo UI app - initial proof of concept working

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
 
 [project.scripts]
 start-backend = "backend_app.cli:main"
+start-refactor-backend = "backend_app.refactor_cli:main"
 
 [project.optional-dependencies]
 dev = [
