--- a/frontend/pyproject.toml
+++ b/frontend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
 
 [project.scripts]
 start-frontend = "main:cli"
+start-refactor-frontend = "refactor_main:cli"
 
 [project.optional-dependencies]
 dev = [
@@ -21,5 +22,5 @@ requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["app"]
-py-modules = ["main"]
+packages = ["app", "refactor_app"]
+py-modules = ["main", "refactor_main"]
